[project]
name = "nfl-production-charting"
version = "0.1.0"
description = ""
authors = [
    {name = "Lukas Nesheim",email = "lukenesh@me.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
